--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ img{
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0px auto;
 	text-align: center;
-	margin-bottom: 5%;
+	margin-bottom: 3%;
 	}
 
 #site-title {
-	margin-top: 5%;
+	margin-top: 3%;
   	font-size: 25px;
 }
 
@@ -57,10 +57,6 @@ img{
 	text-decoration: underline;
 	color: black;
 	font-size: 25px
-}
-
-#homepage img{
-	margin-top: 15px;
 }
 
 #homepage .subpage-link{
